[UPDATE] Small fixes, added note for favorite
